# task_of_bootcamp

thinkseed/TasksToBeCompleted/T6a/: a.out  calc  myCalc
thinkseed/TasksToBeCompleted/T6b/: main  main.c  mylib.h
thinkseed/TasksToBeCompleted/T6c/: a.out  main  main.c  mylib.c  mylib.h
thinkseed/TasksToBeCompleted/T7/: build.sh  main.c
thinkseed/TasksToBeCompleted/T8/: makefile
thinkseed/TasksToBeCompleted/T9/: CMakeLists.txt
thinkseed/TasksToBeCompleted/T9/src/: mylib.c
thinkseed/task_1/: k.c  task1_sem.c
